--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxs-paint skills__icon'></i>
-                                <span class="skills__name">React.Js</span>
+                                <span class="skills__name">Python</span>
                             </div>
                             <div class="skills__bar skills__ux">
                                 
