--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">As an IT student , I have done some few projects using Html CSS and JavaScript. currently seeking to learn backend as React.js</p>
+                        <p class="skills__text">As an IT student , I have done some few projects using Html CSS and JavaScript. currently seeking to learn backend as Python and Django</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
